# metagomics2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release-docker-image.yml
config/: databases.example.json  server.example.json
docker/scripts/: fetch_ncbi_taxonomy.sh
docs/: REFERENCE_DATA.md  SPECIFICATION_BACKEND.md  SPECIFICATION_ENRICHMENT.md  SPECIFICATION_FRONTEND.md  SPECIFICATION_SINGLE_FILE_ENRICHMENT.md  VERSION_MANAGEMENT.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  ThemeContext.tsx  cytoscape-dagre.d.ts  cytoscape-svg.d.ts  index.css  main.tsx  plotly.d.ts
frontend/src/__tests__/: ThemeContext.test.tsx
frontend/src/components/: Autocomplete.tsx  GoDagControls.tsx  GoDagViewer.tsx  Layout.tsx  MetagomicsLogo.tsx  PeptideDetailsPane.tsx  TaxonomyChart.tsx  ThemeToggle.tsx  (+2 more)
scripts/: build_annotations_db.py
src/metagomics2/: __init__.py  cli.py  config.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_cli_end_to_end.py  test_pipeline_mocked_homology.py  test_real_go_obo.py  test_real_ncbi_taxonomy.py  test_reference_snapshot.py
tests/property/: test_aggregation_invariants.py  test_go_union_invariants.py  test_taxonomy_lca_invariants.py
tests/unit/: test_accession_parsing.py  test_aggregation.py  test_build_annotations_db.py  test_config.py  test_database.py  test_diamond.py  test_email_notification.py  test_email_validation.py  test_enrichment.py  test_exact_matching.py  test_fasta_parsing.py  test_gaf_parser.py  test_go_closure.py  test_hit_filtering.py  test_input_sanitization.py  test_manifest.py  test_ncbi_parser.py  test_obo_parser.py  test_peptide_annotation_go.py  test_peptide_annotation_taxonomy.py  test_peptides_parsing.py  test_reference_loader.py  test_reporting.py  test_server_api.py  test_subject_lookup.py  test_taxonomy_lca.py  test_uniprot_fasta.py  test_worker.py  test_write_peptide_mapping_parquet.py
(+53 files in other folders)
